# corroborate

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: simplify.yml
skills/claim-audit/: SKILL.md
skills/claim-log/: SKILL.md
src/corroborate/: __init__.py  audit.py  build.py  claims.py  cli.py
src/corroborate/judges/: __init__.py  anthropic.py  openai_compatible.py
src/corroborate/renderers/: __init__.py  latex.py  markdown.py
src/vernier/: __init__.py  audit.py  build.py  claims.py  cli.py
src/vernier/renderers/: __init__.py  latex.py  markdown.py
tests/: test_audit.py  test_claims.py
