[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vernier"
version = "0.1.0"
description = "Register, verify, and audit numeric claims in documents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oscar Gilg" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
vernier = "vernier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vernier"]
